
	* AUTHORS: Fixed problem with Kai Wurm's name. Oops.
	* Netcomics/Config.pm.in (clear_date_settings): Added POD text for
	this function.
	* Netcomics/Util.pm (in_future): Added this routine to check if a date
	has happened yet.
	* gtkcomics (Display_comic): Use in_future() to check that the user
	didn't click on a date in the future. Added POD text.
	
2001-05-16  Elliot Glaysher  <nuriko.chan@home.com>

	* AUTHORS: Initial checkin.
	* AUTHORS: Rewrote second heading with Ben's corrections.
	
2001-05-15  Ben Hochstedler  <hochstrb@cs.rose-hulman.edu>

	* Netcomics/Factory.pm (setup): Removed resetting of
	existing_rli_files.
	* Netcomics/HTML.pm (generate_HTML_page): Fixed use of unitialized
	value.

2001-05-14  Elliot Glaysher  <nuriko.chan@home.com>

	* Netcomics/Factory.pm (get_comic): Changed code so it doesn't use
	gotos. I think this fixes it.
	* gtkcomics: Use the progress bar. Supposedly...

2001-05-14  Ben Hochstedler  <hochstrb@cs.rose-hulman.edu>

	* Netcomics/GtkComics.pm: added using strict;
	* Netcomics/Config.pm.in: Added pod.
	(clear_date_settings): Fixed resetting of config options.
	(processARGV): Fixed call to Util::mkgmtime.
	(loaded_rcfiles): This method returns the names of the actual rc
	files loaded.
	(load_rcfile): Changed to croak instead of exit if rc file fails
	loading.  Added keeping track of the rc files loaded.
	* Netcomics/Util.pm (samedate): Added this new function which
	compares two time vals & returns true or false if they are of the
	same date.
	* Netcomics/Factory.pm (get_comic): Added this new method which
	returns the rli & its index for the specific comic & date.
	(remove_from_rli_list): Added this new method to consolodate the
	removal of an rli from the rli & rli_procs lists.
	(build_rli_array_helper): Updated to use the new get_comic() and
	remove_from_rli_list() methods.
	(new): Changed to die instead of exit if load_modules()
	fails. Fixed initializing the date array from the config object.