@@ -7,6 +7,8 @@
 	has happened yet.
 	* gtkcomics (Display_comic): Use in_future() to check that the user
 	didn't click on a date in the future. Added POD text.
+	* Netcomics/Util.pm (in_future): I'm a moron. Date checking now works
+	for comics with a days behind value.
 	
 2001-05-16  Elliot Glaysher  <nuriko.chan@home.com>
 
